release/1.13.1/VERSION.md
# 1.13.1

## Version

|**Data**        | **Value**                 |
|----------------|-------------------------|
| ID   | ```1.13.1```   |
| Release Time   | ```2018-08-22T14:03:42+00:00```   |
| Type   | ```release```   |

## Assets

|**Data**        | **Value**                 |
|----------------|-------------------------|
| id   | ```1.13.1```   |
| sha1   | ```a8ef90d58d4a170f85e3439470c99c25aa8e988b```   |
| size   | ```182369```   |
| total size  | ```189762775```  |
| url       | ```https://piston-meta.mojang.com/v1/packages/a8ef90d58d4a170f85e3439470c99c25aa8e988b/1.13.1.json``` |

## Client

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```8de235e5ec3a7fce168056ea395d21cbdec18d7c```   |
| size   | ```16088559```   |
| url       | ```https://piston-data.mojang.com/v1/objects/8de235e5ec3a7fce168056ea395d21cbdec18d7c/client.jar``` |

## Server

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```fe123682e9cb30031eae351764f653500b7396c9```   |
| size   | ```33832589```   |
| url       | ```https://piston-data.mojang.com/v1/objects/fe123682e9cb30031eae351764f653500b7396c9/server.jar``` |

## Java

|**Data**        | **Value**                 |
|----------------|-------------------------|
| component   | ```jre-legacy```   |
| version   | ```8```   |