release/1.13.2/VERSION.md
# 1.13.2

## Version

|**Data**        | **Value**                 |
|----------------|-------------------------|
| ID   | ```1.13.2```   |
| Release Time   | ```2018-10-22T11:41:07+00:00```   |
| Type   | ```release```   |

## Assets

|**Data**        | **Value**                 |
|----------------|-------------------------|
| id   | ```1.13.1```   |
| sha1   | ```a8ef90d58d4a170f85e3439470c99c25aa8e988b```   |
| size   | ```182369```   |
| total size  | ```189762775```  |
| url       | ```https://piston-meta.mojang.com/v1/packages/a8ef90d58d4a170f85e3439470c99c25aa8e988b/1.13.1.json``` |

## Client

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```30bfe37a8db404db11c7edf02cb5165817afb4d9```   |
| size   | ```16089640```   |
| url       | ```https://piston-data.mojang.com/v1/objects/30bfe37a8db404db11c7edf02cb5165817afb4d9/client.jar``` |

## Server

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```3737db93722a9e39eeada7c27e7aca28b144ffa7```   |
| size   | ```33835116```   |
| url       | ```https://piston-data.mojang.com/v1/objects/3737db93722a9e39eeada7c27e7aca28b144ffa7/server.jar``` |

## Java

|**Data**        | **Value**                 |
|----------------|-------------------------|
| component   | ```jre-legacy```   |
| version   | ```8```   |